--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,21 @@
+body {
+  font-family: Roboto, sans-serif;
+  color: #434455;
+  background-color: #ffffff;
+}
+
 a {
   text-decoration: none;
 }
 ul {
   list-style: none;
 }
-body {
-  font-family: Roboto, sans-serif;
-  color: #434455;
-}
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0, 0, 0, 0);
-  overflow: hidden;
-}
+
 /*-------------------------HEADER--------------------------*/
 
 .header-logo-italic {
-  color: var(--IRIS, #4d5ae5);
-  font-family: Raleway;
+  color: #4d5ae5;
+  font-family: Raleway, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -33,8 +24,8 @@ body {
   text-transform: uppercase;
 }
 .header-novigation-logo {
-  color: var(--NAVY-BLUE, #2e2f42);
-  font-family: Raleway;
+  color: #2e2f42;
+  font-family: Raleway, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -59,6 +50,7 @@ body {
 
 .header-address-contact {
   color: #434455;
+  font-style: normal;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
@@ -69,6 +61,10 @@ body {
 }
 .header-address-contact:focus {
   color: #404bbf;
+}
+
+.hero-title {
+  line-height: 1.07;
 }
 
 /*--------------------------------------------------------------------------*/
@@ -94,8 +90,9 @@ body {
 .hero-order-btn {
   background-color: #4d5ae5;
 }
-.hero-order-text-btn {
-  color: #fff;
+.hero-order-btn {
+  color: #ffffff;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5; /* 150% */
@@ -114,11 +111,11 @@ button {
   line-height: 1.2; /* 120% */
   letter-spacing: 0.02em;
 }
-.about-ua-item-text {
+.about-us-item-text {
   color: #434455;
   font-size: 16px;
   line-height: 1.5; /* 150% */
-  letter-spacing: 0.2em;
+  letter-spacing: 0.02em;
 }
 
 /*------------------------------------------------------------------------------*/
@@ -126,7 +123,7 @@ button {
 /*-------------------------------OUR TEAM----------------------------------------*/
 
 .team {
-  background-color: #f4f4fd;
+  background-color: #ffffff;
 }
 .team-title {
   color: #2e2f42;
@@ -158,7 +155,7 @@ button {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2; /* 120% */
-  letter-spacing: 0.2em;
+  letter-spacing: 0.02em;
 }
 .subtitle-text {
   color: #434455;
@@ -183,7 +180,7 @@ button {
 }
 .footer-logo {
   color: #f4f4fd;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 1.17; /* 116.667% */
