--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,9 @@ button {
 .team-title-list {
   background-color: #ffffff;
 }
+.team-item {
+  background-color: #ffffff;
+}
 /*----------------------------------------------------------------------------------------*/
 
 /*-----------------------------------PORTFOLIO--------------------------------------------*/
